# bmp_to_jpeg

./: .gitignore  README.md
image/: image.cpp  image.h  pixel.cpp  pixel.h
processing/: file_process.cpp  file_process.h
project/: .gitignore  CMakeLists.txt
project/image/: image.cpp  image.h  pixel.cpp  pixel.h
project/processing/: discrete_cosine_transform.cpp  discrete_cosine_transform.h  entropy_encoding.cpp  entropy_encoding.h  file_process.cpp  file_process.h  huffman_encoder.cpp  huffman_encoder.h  matrix.cpp  matrix.h  matrix.tpp  quantization.cpp  quantization.h  subsample.cpp  subsample.h
